--- a/ai.html
+++ b/ai.html
@@ -23,6 +23,9 @@
             width: 600px;
             text-align: center;
         }
+        h2 {
+            font-size: medium;
+        }
         h1 {
             color: #333;
         }
@@ -64,7 +67,12 @@
 <body>
 
 <div class="container">
-    <h1>Obsidian Learning Tool</h1>
+    <h1>
+        Obsidian Learning Tool
+    </h1>
+    <h2>
+        <a href="home.html">HOME</a>
+    </h2>
     <p>Input your notes or text below to analyze and get useful insights.</p>
     
     <textarea id="userInput" placeholder="Enter text or notes here..."></textarea>
