--- a/cprogrammingquiz.html
+++ b/cprogrammingquiz.html
@@ -57,8 +57,9 @@
 <body>
 
 <div class="quiz-container">
+    <a href="home.html">HOME</a>
     <h2>C Programming Quiz</h2>
-    <form>
+    <form action="results.html" method="get">
         <div class="question">
             <h3>1. Which of the following is the correct syntax to print "Hello, World" in C?</h3>
             <div class="options">
@@ -104,9 +105,39 @@
             </div>
         </div>
 
-        <button type="submit">Submit</button>
+        <button type="submit">Result</button>
     </form>
 </div>
+<script>
+    document.querySelector('form').addEventListener('submit', function(event) {
+        event.preventDefault();
 
+        const score = calculateScore();
+        const date = formatDate(new Date());
+
+        let quizResults = JSON.parse(localStorage.getItem('quizResults')) || [];
+        quizResults.push({ date: date, subject: 'C Programming Quiz', score: score });
+        localStorage.setItem('quizResults', JSON.stringify(quizResults));
+
+        this.submit();
+    });
+
+    function calculateScore() {
+        const correctAnswers = ['b', 'c', 'b', 'b', 'c'];
+        let score = 0;
+        correctAnswers.forEach((answer, index) => {
+            const userAnswer = document.querySelector(`input[name=q${index + 1}]:checked`);
+            if (userAnswer && userAnswer.value === answer) {
+                score += 1;
+            }
+        });
+        return (score / correctAnswers.length) * 100;
+    }
+
+    function formatDate(date) {
+        const options = { month: 'long', day: 'numeric', year: 'numeric'};
+        return date.toLocaleDateString('en-US', options);
+    }
+</script>
 </body>
 </html>
