--- a/home.html
+++ b/home.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> <!-- test-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obsidian Learning</title>
     <style>
+        header {
+            text-align: center;
+        }
         body {
             font-family: 'Arial', sans-serif;
             background-color: #ecebbe;
@@ -51,6 +54,7 @@
             bottom: 0;
             width: 100%;
         }
+
     </style>
 </head>
 <body>
@@ -66,6 +70,7 @@
     <a href="javascriptquiz.html">Javascript Quiz</a>
     <a href="results.html">Results</a>
     <a href="projecthelper.html">Project Helper</a>
+    <a href="ai.html">learning Tool</a>
     
 </nav>
 
@@ -86,6 +91,20 @@
     <section id="results">
         <h3>Your Results</h3>
         <p>Check your test results and analyze your performance to identify areas for improvement.</p>
+    </section>
+
+    <section id="project helper">
+        <h3>project helping material</h3>
+        <p>This project helper page of ours help beginners to code easily through various websites
+            and links which navigates you to wonderful and precise notes and example programs.
+        </p>
+    </section>
+    
+    <section id="Obisidian learning tool">
+        <h3>Obisidian learning tool</h3>
+        <p>Our learning tool helps our students to enter their notes on our tool which helps
+            them analyzye and make their notes precise while highlighting the important keywords.
+        </P>
     </section>
 </div>
 
