--- a/javascriptquiz.html
+++ b/javascriptquiz.html
@@ -60,8 +60,9 @@
 <body>
 
 <div class="quiz-container">
+    <a href="home.html">HOME</a>
     <h2>JavaScript Quiz - Page 1</h2>
-    <form action="page2.html" method="get">
+    <form action="results.html" method="get">
         <div class="question">
             <h3>1. Which company developed JavaScript?</h3>
             <div class="options">
@@ -108,10 +109,40 @@
         </div>
 
         <div class="button-container">
-            <button type="submit">Next</button>
+            <button type="submit">Result</button>
         </div>
     </form>
 </div>
+<script>
+    document.querySelector('form').addEventListener('submit', function(event) {
+        event.preventDefault();
 
+        const score = calculateScore();
+        const date = formatDate(new Date());
+
+        let quizResults = JSON.parse(localStorage.getItem('quizResults')) || [];
+        quizResults.push({ date: date, subject: 'JavaScript Quiz', score: score });
+        localStorage.setItem('quizResults', JSON.stringify(quizResults));
+
+        this.submit();
+    });
+
+    function calculateScore() {
+        const correctAnswers = ['b', 'c', 'b', 'b', 'c'];
+        let score = 0;
+        correctAnswers.forEach((answer, index) => {
+            const userAnswer = document.querySelector(`input[name=q${index + 1}]:checked`);
+            if (userAnswer && userAnswer.value === answer) {
+                score += 1;
+            }
+        });
+        return (score / correctAnswers.length) * 100;
+    }
+
+    function formatDate(date) {
+        const options = { month: 'long', day: 'numeric', year: 'numeric'};
+        return date.toLocaleDateString('en-US', options);
+    }
+</script>
 </body>
 </html>
