--- a/learning.html
+++ b/learning.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coding Courses - Obsidian Learning</title>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,7 +14,7 @@
             padding: 0;
         }
         header {
-            background-color: #2a2a72;
+            background-color: #6899d8;
             color: white;
             padding: 20px;
             text-align: center;
@@ -60,6 +61,7 @@
 <header>
     <h1>Obsidian Learning: Coding Courses</h1>
     <p>Your Hub for Learning Coding and Programming Skills</p>
+    <a href="home.html">HOME</a>
 </header>
 
 <div class="container">
