--- a/projecthelper.html
+++ b/projecthelper.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <header>
-        THE OBSIDIAN LEARNING
-    </header>
 <head>
     <title>Programming Project Helper</title>
     <style>
+        header {
+            height: 100px;
+            font-size: 25px;
+            text-align:center;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -17,15 +19,7 @@
             margin: 0 auto;
             padding: 10px;
         }
-        header {
-    background-color: #343a40; /* Existing background color */
-    color: #000000; /* Existing text color */
-    padding: 20px 0; /* Adjust padding for more space */
-    font-size: 36px; /* Increase font size */
-    height: 120px; /* Set a new height for the header */
-    text-align: center; /* Center align text */
-}
-
+    
         
         nav {
             background-color: #007bff;
@@ -61,6 +55,7 @@
         <a href="#css">CSS</a>
         <a href="#javascript">JavaScript</a>
         <a href="#python">Python</a>
+        <a href="home.html">HOME</a>
     </nav>
     <div class="container">
         <section id="html">
